--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
     <script src="js/jquery.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/js.cookie.min.js"></script>
     <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
@@ -14,6 +15,7 @@
     <div class="header">
         <ul class="nav nav-tabs">
             <li role="presentation" class="active"><a href="javascript:;">文件列表</a></li>
+            <li role="presentation"><a href="/share.html">文本共享</a></li>
         </ul>
     </div>
     <div class="panel panel-default">
