--- a/src/main/resources/static/share.html
+++ b/src/main/resources/static/share.html
@@ -10,6 +10,7 @@
     <script src="js/qs.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/clipboard.min.js"></script>
+    <script src="js/js.cookie.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/share.css" rel="stylesheet">
 </head>
@@ -35,10 +36,8 @@
             <ul class="list-group">
                 <li class="list-group-item" v-for="text in textList">
                     <div class="float-end">
-                        <button class="btn btn-outline-primary btn-sm" id="btnCopy"
-                            :data-clipboard-text="text.data">复制</button>
-                        <button class="btn btn-outline-danger btn-sm" id="btnDelete"
-                            @click="confirmDelete(text.id)">删除</button>
+                        <button class="btn btn-outline-primary btn-sm" id="btnCopy" :data-clipboard-text="text.data">复制</button>
+                        <button class="btn btn-outline-danger btn-sm" id="btnDelete" @click="confirmDelete(text.id)">删除</button>
                     </div>
                     <p class="text-primary">{{text.author}}</p>
                     <p style="white-space: pre-wrap">{{text.data}}</p>
@@ -61,7 +60,6 @@
                     <button class="btn btn-outline-primary" data-bs-dismiss="modal">关闭</button>
                 </div>
             </div>
-
         </div>
     </div>
     <div class="modal" tabindex="-1" ref="confirmModal">
@@ -75,8 +73,25 @@
                     <p>确定要删除吗？</p>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-outline-danger" data-bs-dismiss="modal"
-                        @click="(event) => deleteText(event.target.getAttribute('data-id'))" ref="btnDelete">确定</button>
+                    <button class="btn btn-outline-danger" data-bs-dismiss="modal" @click="deleteText()">确定</button>
+                    <button class="btn btn-outline-primary" data-bs-dismiss="modal">关闭</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal" tabindex="-1" ref="authModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">验证</h5>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label for="password" class="form-label">请输入密码</label>
+                    <input type="password" class="form-control" id="password" ref="password">
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-outline-primary" data-bs-dismiss="modal" @click="getToken()">确定</button>
                     <button class="btn btn-outline-primary" data-bs-dismiss="modal">关闭</button>
                 </div>
             </div>
