--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
                     <a class="nav-link active">文件列表</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="share.html">文本共享</a>
+                    <a class="nav-link" href="text.html">文本共享</a>
                 </li>
             </ul>
         </div>
