--- a/src/main/resources/static/text.html
+++ b/src/main/resources/static/text.html
@@ -11,8 +11,10 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/clipboard.min.js"></script>
     <script src="js/js.cookie.min.js"></script>
+    <script src="js/vue-router.global.min.js"></script>
+    <script src="js/FileSaver.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/share.css" rel="stylesheet">
+    <link href="css/text.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,23 +29,43 @@
                 </li>
             </ul>
         </div>
-        <div id="add">
-            <input class="form-control" placeholder="用户名" v-model="text.author" ref="author">
-            <textarea class="form-control" rows="10" placeholder="文本内容" v-model="text.data" ref="data"></textarea>
-            <button class="btn btn-outline-primary float-end" @click="add()">发布</button>
+        <div v-if="!$route.params.id">
+            <div id="add">
+                <input class="form-control" placeholder="用户名" v-model="text.author" ref="textAuthor">
+                <textarea class="form-control" rows="10" placeholder="文本内容" v-model="text.data" ref="textData"></textarea>
+                <button class="btn btn-outline-primary float-end" @click="add()">发布</button>
+            </div>
+            <div id="list">
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-action" v-for="text in textList">
+                        <div class="float-end">
+                            <button class="btn btn-outline-primary btn-sm" id="btnCopy" :data-clipboard-text="text.data">复制</button>
+                            <button class="btn btn-outline-danger btn-sm" id="btnDelete" @click="confirmDelete(text.id)">删除</button>
+                        </div>
+                        <div @click="$router.push('/' + text.id)">
+                            <p class="text-primary">{{text.author}}</p>
+                            <p style="white-space: pre-wrap">{{text.data}}</p>
+                            <p class="text-muted">发布于 {{text.time.slice(0, -3)}}</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div id="list">
-            <ul class="list-group">
-                <li class="list-group-item" v-for="text in textList">
-                    <div class="float-end">
-                        <button class="btn btn-outline-primary btn-sm" id="btnCopy" :data-clipboard-text="text.data">复制</button>
-                        <button class="btn btn-outline-danger btn-sm" id="btnDelete" @click="confirmDelete(text.id)">删除</button>
+        <div v-if="$route.params.id">
+            <div class="card">
+                <div class="card-body border-bottom">
+                    <div class="float-start">
+                        <button class="btn btn-outline-primary" @click="$router.push('/')">返回</button>
+                        <button class="btn btn-outline-primary" id="btnCopy" data-clipboard-target="#textShow">复制</button>
+                        <button class="btn btn-outline-primary" @click="download()">下载</button>
                     </div>
-                    <p class="text-primary">{{text.author}}</p>
-                    <p style="white-space: pre-wrap">{{text.data}}</p>
-                    <p class="text-muted">发布于 {{text.time.slice(0, -3)}}</p>
-                </li>
-            </ul>
+                    <div class="float-end">
+                        <button class="btn btn-outline-primary" @click="update()">修改</button>
+                        <button class="btn btn-outline-danger" @click="confirmDelete($route.params.id)">删除</button>
+                    </div>
+                </div>
+                <textarea class="form-control border-0 font-monospace" rows="20" id="textShow" v-model="data" ref="textShow"></textarea>
+            </div>
         </div>
     </div>
     <div class="modal" tabindex="-1" ref="messageModal">
@@ -97,7 +119,7 @@
             </div>
         </div>
     </div>
-    <script src="js/share.js"></script>
+    <script src="js/text.js"></script>
 </body>
 
 </html>
